# us_gun_violence_forecasting

./: .gitignore  README.md  US Gun Violence – Time Series Modeling.ipynb
.ipynb_checkpoints/: Gun Violence Archive – Data Cleaning – Missing Data-checkpoint.ipynb  Gun Violence Archive – Data Cleaning-checkpoint.ipynb  US Gun Violence – Time Series Modeling – Original-checkpoint.ipynb  US Gun Violence – Time Series Modeling-checkpoint.ipynb
Data Cleaning/: Gun Violence Archive – Addressing Missing Data.ipynb  Gun Violence Archive – Data Cleaning – Addressing Missing Data.ipynb  Gun Violence Archive – Data Cleaning – Fixing Scraper File.ipynb  Gun Violence Archive – Data Cleaning – Merging DataFrames.ipynb  Gun Violence Archive – Data Cleaning – Missing Data.ipynb  Gun Violence Archive – Data Cleaning.ipynb  Gun Violence Archive – Exporting Data.ipynb  Gun Violence Archive – Filling Missing Dates.ipynb  State Firearm Laws – Data Cleaning.ipynb  my_functions.py
Data Cleaning/.ipynb_checkpoints/: Gun Violence Archive – Addressing Missing Data-checkpoint.ipynb  (+5 more)
Web Interface/: us_gun_violence_forecasting.md  us_gun_violence_forecasting_development.md  us_gun_violence_forecasting_documentation.md  us_gun_violence_forecasting_graph.md
backend/: pyproject.toml  update_forecast_data.py
backend/src/: update_forecast_data.py  utils.py
frontend/: .prettierignore  README.md  add-scoped-class-plugin.cjs  package-lock.json  package.json  rollup.config.js  vite.config.js
svelte/: .gitignore  add-scoped-class-plugin.cjs  eslint.config.cjs  package-lock.json  package.json
(+21 files in other folders)
